Turn the "esiop_intr: I shouldn't be there !" panic into a printf followed by a return from the interrupt handler.  The condition is triggered on some KVM virtual hosts, apparently harmlessly, and not panicing makes it possible to boot a NetBSD GENERIC kernel on those hosts.  Also make the same change to siop to minimize divergence between siop and esiop.  Fixes PR kern/48277.